# eudora

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.cjs
.github/workflows/: ci.yml
docs/: self-hosting.md
e2e/: agents.spec.js  auth.spec.js  chat.spec.js  helpers.js  tier.spec.js
sdk/: README.md
sdk/node/: README.md  package-lock.json  package.json  tsconfig.json
sdk/python/: .gitignore  README.md  pyproject.toml  test_live.py
sdk/python/eudora/: __init__.py  client.py
sdk/python/eudora/extras/: __init__.py  crewai.py  langchain.py
sdk/python/eudora_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sdk/python/tests/: test_client.py  test_crewai.py  test_langchain.py
server/: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  checkagent.cjs  checkkey.cjs  checkschema.cjs  checktype.cjs  package-lock.json  package.json  railway.json  testdecrypt.cjs  testdecrypt2.cjs  tsconfig.json  vitest.config.js
server/src/: index.js  index.ts
shared/: package.json
shared/constants/: cronPresets.js  index.js  intentTypes.js  providerTypes.js  tierLimits.js
src/: App.jsx  index.css
src/api/: client.js
src/components/: FloatingStatus.jsx  Header.jsx  Layout.jsx  PlanModal.jsx  Sidebar.jsx  TemplateGallery.jsx  TierGate.jsx
src/constants/: agentTemplates.js
src/hooks/: useSelfHosted.js  useTierLimits.js
src/pages/: AcceptInvite.jsx  AgentBuilder.jsx  Analytics.jsx  Approvals.jsx  AuditLog.jsx  Chat.jsx  (+19 more)
(+188 files in other folders)
