[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eudora-sdk"
version = "0.1.0"
description = "Eudora AI Behavioral Compliance SDK for Python"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["httpx>=0.24,<1"]
keywords = ["eudora", "ai", "compliance", "audit", "dora"]

[tool.setuptools.packages.find]
where = ["."]
include = ["eudora*"]
